<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_type" />

        <RadioGroup
            android:id="@+id/network_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                />

            <RadioButton
                android:id="@+id/rbtn_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any"
                />

            <RadioButton
                android:id="@+id/rbtn_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requires"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sw_idle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/device_idle"
                android:textAlignment="viewStart"/>

            <Switch
                android:id="@+id/sw_charging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/device_charging"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/override_deadline"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/seekBarProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        </LinearLayout>

        <SeekBar
            android:id="@+id/skb_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="scheduleJob"
            android:text="@string/schedule_job"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="cancelJobs"
            android:text="@string/cancel_jobs"
            android:textAllCaps="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>